[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Game/Items/Item.gd" type="Script" id=1]
[ext_resource path="res://Assets/Game/Items/MoreBombs.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/Game/PickUpItem.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Item" type="Node2D"]
script = ExtResource( 1 )

[node name="PickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 1 )

[node name="Icon" type="TextureRect" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )

[node name="PickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="PickUp" to="." method="_on_PickUp_finished"]
